--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
 %         Maaike de Boer\inst{2}\orcidID{0000-0002-2775-8351} \and
 %         Sergey Sosnovsky\inst{1}\orcidID{0000-0001-8023-1770}}
 
-\authorrunning{U. Bhattacharya et al.}
+% \authorrunning{U. Bhattacharya et al.}
 % % First names are abbreviated in the running head.
 % % If there are more than two authors, 'et al.' is used.
 % %
