--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2011,6 +2011,39 @@ Section: 0},
 	annote = {Type: Article}
 }
 
+@article{corey1998AveragingCorrelationsExpected,
+	author = {David M. Corey and William P. Dunlap and Michael J. Burke},
+	title = {Averaging Correlations: Expected Values and Bias in Combined Pearson rs and Fisher's z Transformations},
+	journal = {The Journal of General Psychology},
+	volume = {125},
+	number = {3},
+	pages = {245--261},
+	year = {1998},
+	publisher = {Routledge},
+	doi = {10.1080/00221309809595548},
+	URL = { 
+    
+        https://doi.org/10.1080/00221309809595548
+    
+    
+
+},
+	eprint = { 
+    
+        https://doi.org/10.1080/00221309809595548
+    
+    
+
+},
+	abstract = { R. A. Fisher's z (z'; 1958) essentially normalizes the sampling distribution of Pearson r and can thus be used to obtain an average correlation that is less affected by sampling distribution skew, suggesting a less biased statistic. Analytical formulae, however, indicate less expected bias in average r than in average z' back-converted to average rz'
+. In large part because of this fact, J. E. Hunter and F. L. Schmidt (1990) have argued that average r is preferable to average rz'
+. In the present study, bias in average r and average rz'
+ was empirically examined. When correlations from a matrix were averaged, the use of z' decreased bias. For independent correlations, contrary to analytical expectations, average rz'
+ was also generally the less biased statistic. It is concluded that (a) average rz'
+ is a less biased estimate of the population correlation than average r and (b) expected values formulae do not adequately predict bias in average rz'
+ when a small number of correlations are averaged. }
+}
+
 @article{crum2024EnrichingOntologiesWith,
 	file = {References/pdf/crum2024EnrichingOntologiesWith.pdf},
 	title = {Enriching {Ontologies} with {Disjointness} {Axioms} using {Large} {Language} {Models}},
@@ -2023,6 +2056,18 @@ Section: 0},
 	note = {Section: 0},
 	keywords = {Knowledge graphs, Knowledge graph, Large language model, Ontology, Language model, Ontology enrichment, Consistency checking, Ontology's, Contrastive Learning, Dbpedia, Disjointness, Disjointness learning, Implicit knowledge},
 	annote = {Type: Conference paper}
+}
+
+@article{davies1979ClusterSeparationMeasure,
+	author = {Davies, David L. and Bouldin, Donald W.},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	title = {A Cluster Separation Measure},
+	year = {1979},
+	volume = {PAMI-1},
+	number = {2},
+	pages = {224-227},
+	keywords = {Dispersion;Density measurement;Algorithm design and analysis;Clustering algorithms;Partitioning algorithms;Multidimensional systems;Data analysis;Performance analysis;Humans;Missiles;Cluster;data partitions;multidimensional data analysis;parametric clustering;partitions;similarity measure},
+	doi = {10.1109/TPAMI.1979.4766909}
 }
 
 @Article{deepseekai2024DeepseekV3Technical,
@@ -4167,6 +4212,13 @@ Section: 0},
 	annote = {Type: Article}
 }
 
+@article{nori2024MedpromptO1Exploration,
+	title = {From medprompt to o1: Exploration of run-time strategies for medical challenge problems and beyond},
+	author = {Nori, Harsha and Usuyama, Naoto and King, Nicholas and McKinney, Scott Mayer and Fernandes, Xavier and Zhang, Sheng and Horvitz, Eric},
+	journal = {arXiv preprint arXiv:2411.03590},
+	year = {2024}
+}
+
 @article{norouzi2023ConversationalOntologyAlignment,
 	file = {References/pdf/norouzi2023ConversationalOntologyAlignment.pdf},
 	title = {Conversational {Ontology} {Alignment} with {ChatGPT}},
@@ -4299,6 +4351,33 @@ Section: 0},
 	keywords = {Ontologies, Large language model, Ontology, Natural language processing, Language model, Large language models, Semantics, RDF, Resource description framework, Similarity, LLMs, Computational linguistics, Resource Description Framework (RDF), Latent semantic analysis, Measurement, Evaluation metrics, Ground truth, Natural languages, Syntactics, Vectors, Pattern recognition, Ontology's, Natural language processing systems, Large datasets, Vector spaces, RDF triples, Resources description frameworks},
 	pages = {136--143},
 	annote = {ISSN: 2472-9671}
+}
+
+@misc{openai2024EmbeddingModels,
+	author = {OpenAI},
+	title = {{N}ew embedding models and {A}{P}{I} updates --- openai.com},
+	howpublished = {\url{https://openai.com/index/new-embedding-models-and-api-updates/}},
+	year = {25-01-2024},
+	note = {[Accessed 06-05-2025]}
+}
+
+@misc{openai2024HelloGpt4o,
+	title = {Hello {{GPT-4o}}},
+	author = {{OpenAI}},
+	date = {2024},
+	year = 2024,
+	url = {https://openai.com/index/hello-gpt-4o/},
+	urldate = {2024-09-12},
+	abstract = {We're announcing GPT-4 Omni, our new flagship model which can reason across audio, vision, and text in real time.},
+	langid = {american},
+	timestamp = {2024-09-12T19:38:33Z}
+}
+
+@misc{openai2024IntroducingOpenaiO1,
+	title = {Introducing {{OpenAI O1}}},
+	author = {{OpenAI}},
+	year = 2024,
+	url = {https://openai.com/o1/}
 }
 
 @article{otsuki2025EfficientMaintenanceLarge,
@@ -5026,6 +5105,16 @@ Section: 0},
                   https://dblp.org}
 }
 
+@misc{shaya2012AstronomyOntology,
+	title = {Astronomy {{Ontology}}},
+	author = {Shaya, Edward},
+	date = {2012},
+	year = 2012,
+	url = {https://www.astro.umd.edu/~eshaya/astro-onto/ontologies/astronomy.html},
+	urldate = {2024-11-20},
+	timestamp = {2024-11-20T14:00:28Z}
+}
+
 @article{shi2025EvidenceTriangulatorUsing,
 	file = {References/pdf/shi2025EvidenceTriangulatorUsing.pdf},
 	title = {Evidence triangulator: using large language models to extract and synthesize causal evidence across study designs},
@@ -5523,6 +5612,15 @@ Section: 0},
 	annote = {Type: Article}
 }
 
+@Article{van2008VisualizingData,
+	title = {Visualizing data using t-SNE.},
+	author = {Van der Maaten, Laurens and Hinton, Geoffrey},
+	journal = {Journal of machine learning research},
+	volume = {9},
+	number = {11},
+	year = {2008}
+}
+
 @Article{vaswani2017AttentionIsAll,
 	file = {References/pdf/vaswani2017AttentionIsAll.pdf},
 	title = {Attention is all you need},
@@ -5657,6 +5755,13 @@ Section: 0},
 	keywords = {Ontology, Language model, Semantics, Knowledge engineering, Description logic, Empirical studies, Computational linguistics, Latent semantic analysis, Formal modeling, Syntactics, Ontology's, Structured information, Experiment and analysis, Formal syntaxes, Model-theoretic semantics, Symbolic knowledge},
 	pages = {2503--2519},
 	annote = {Type: Conference paper}
+}
+
+@article{wang2024DoAdvancedLanguage,
+	title = {Do advanced language models eliminate the need for prompt engineering in software engineering?},
+	author = {Wang, Guoqing and Sun, Zeyu and Gong, Zhihao and Ye, Sixiang and Chen, Yizhou and Zhao, Yifan and Liang, Qingyuan and Hao, Dan},
+	journal = {arXiv preprint arXiv:2411.02093},
+	year = {2024}
 }
 
 @article{wang2024ResearchKnowledgeGraph,
